Slightly smaller times to prevent wrapping

--- a/application.css
+++ b/application.css
@@ -586,7 +586,7 @@ body.events {
       background: #000;
       width: 476px;
       font-family: markus_inkregular;
-      font-size: 1.4em;
+      font-size: 1.3em;
       letter-spacing: 0.06em;
       -webkit-font-smoothing: antialiased;
       padding: 44px 48px; }
